<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>org.icatproject</groupId>
	<artifactId>topcat</artifactId>
	<packaging>war</packaging>
	<version>2.0.0-SNAPSHOT</version>
	<name>TopCAT</name>
	<description>Web frontend for multiple ICATs</description>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

<<<<<<< HEAD
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <inherited>true</inherited>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.trecloux</groupId>
                <artifactId>yeoman-maven-plugin</artifactId>
                <version>0.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>validate</phase>
                        <configuration>
                            <target>
                                <copy file="${basedir}/yo/app/config/topcat.json.example" tofile="${project.build.directory}/topcat.json.example" />
                                <copy file="${basedir}/yo/app/languages/lang.json.example" tofile="${project.build.directory}/lang.json.example" />
                                <copy file="${basedir}/yo/app/styles/topcat.css" tofile="${project.build.directory}/topcat.css.example" />
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <webResources>
                        <resource>
                            <directory>yo/dist</directory>
                            <excludes>
                                <exclude>**/config/*.json</exclude>
                                <exclude>**/config/*.example</exclude>
                                <exclude>**/languages/*.json</exclude>
                                <exclude>**/languages/*.example</exclude>
                            </excludes>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
=======
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<inherited>true</inherited>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.trecloux</groupId>
				<artifactId>yeoman-maven-plugin</artifactId>
				<version>0.5</version>
				<executions>
					<execution>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>validate</phase>
						<configuration>
							<target>
								<copy file="${basedir}/yo/app/config/topcat.json" tofile="${project.build.directory}/topcat.json.example" />
								<copy file="${basedir}/yo/app/config/topcat_multi.json"
									tofile="${project.build.directory}/topcat-multi.json.example" />
								<copy file="${basedir}/yo/app/languages/lang.json" tofile="${project.build.directory}/lang.json.example" />
								<copy file="${basedir}/yo/app/styles/topcat.css" tofile="${project.build.directory}/topcat.css.example" />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<webResources>
						<resource>
							<directory>yo/dist</directory>
							<excludes>
								<exclude>**/config/*.json</exclude>
								<exclude>**/languages/*.json</exclude>
							</excludes>
						</resource>
					</webResources>
				</configuration>
			</plugin>
>>>>>>> f39f9b12f9645b4758d77d87a6486bcd03ea4906

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<inherited>false</inherited>
				<configuration>
					<descriptors>
						<descriptor>${basedir}/src/assemble/distribution.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>yo/dist</directory>
						</fileset>
						<fileset>
							<directory>yo/.tmp</directory>
						</fileset>
						<!-- <fileset> <directory>yo/node_modules</directory> </fileset> -->
					</filesets>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.4</version>
				<dependencies>
					<dependency><!-- add support for ssh/scp -->
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>2.10</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
				<dependencies>
					<dependency><!-- add support for ssh/scp -->
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>2.10</version>
					</dependency>
				</dependencies>
			</plugin>

		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>1.0.3.Final</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>7.0</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.30</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.2</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>1.7.2</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.2</version>
		</dependency>
		<dependency>
			<groupId>org.icatproject</groupId>
			<artifactId>icat.client</artifactId>
			<version>4.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.icatproject</groupId>
			<artifactId>icat.utils</artifactId>
			<version>4.7.0</version>
		</dependency>
		<dependency>
			<groupId>org.icatproject</groupId>
			<artifactId>ids.client</artifactId>
			<version>1.3.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-persistence-dbunit</artifactId>
			<version>1.0.0.Alpha7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.jayway.restassured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>2.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.samaxes.filter</groupId>
			<artifactId>cachefilter</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.4.1</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>arquillian-glassfish-embedded</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-glassfish-embedded-3.1</artifactId>
					<version>1.0.0.CR3</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.glassfish.main.extras</groupId>
					<artifactId>glassfish-embedded-all</artifactId>
					<version>4.0</version>
					<scope>provided</scope>
				</dependency>
				<!-- Enable dependency if you want to use H2 -->
				<!-- Also update glassfish-resources.xml to use H2 connection information -->
				<!-- <dependency> <groupId>com.h2database</groupId> <artifactId>h2</artifactId> 
					<version>1.3.166</version> <scope>test</scope> </dependency> -->
			</dependencies>
			<build>
				<testResources>
					<testResource>
						<directory>src/test/resources</directory>
					</testResource>
					<testResource>
						<directory>src/test/resources-glassfish-embedded</directory>
					</testResource>
				</testResources>
				<plugins>
					<!-- The surefire plugin is configured to pass a system property to 
						GlassFish to retarget the derby log file -->
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.12</version>
						<configuration>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
							<systemPropertyVariables>
								<java.util.logging.config.file>
									${project.build.testOutputDirectory}/logging.properties
								</java.util.logging.config.file>
								<derby.stream.error.file>
									${project.build.directory}/derby.log
								</derby.stream.error.file>
							</systemPropertyVariables>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<repoUrl>http://www.icatproject.org/mvn/repo</repoUrl>
		<project.scm.id>github</project.scm.id>
	</properties>

	<repositories>
		<repository>
			<id>ICAT Repo</id>
			<url>http://www.icatproject.org/mvn/repo</url>
		</repository>
	</repositories>

	<scm>
		<connection>scm:git:https://github.com/icatproject/topcat.git</connection>
		<developerConnection>scm:git:https://github.com/icatproject/topcat.git</developerConnection>
		<url>https://github.com/icatproject/topcat</url>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<url>https://github.com/icatproject/topcat/issues</url>
		<system>GitHub</system>
	</issueManagement>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<organization>
		<name>The ICAT Collaboration</name>
		<url>http://www.icatproject.org</url>
	</organization>

	<distributionManagement>
		<downloadUrl>http://www.icatproject.org/mvn/repo</downloadUrl>
		<site>
			<id>website</id>
			<url>scp://www.icatproject.org/var/www/html/mvn/site/topcat/${project.version}</url>
		</site>
		<repository>
			<id>repo</id>
			<url>scp://www.icatproject.org/var/www/html/mvn/repo</url>
		</repository>
	</distributionManagement>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.8.1</version>
				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>summary</report>
							<report>dependencies</report>
							<report>issue-tracking</report>
							<report>license</report>
							<report>plugins</report>
							<report>scm</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

</project>